k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop
spec:
  selector: { app: shop }
  ports:
    - port: 80
      targetPort: 80
